MDEV-15215 main.partition_explicit_prune fails in bulidbot with assertion failures and server crashes.

ha_partition::get_open_file_sample() implemented to be used
        when we need a file sample that is surely opened.